tests/ui/cve_2021_29941_2/cve_2021_29941_2_from_raw_parts.stderr
error: it violates the precondition of `std::slice::from_raw_parts_mut` to create a slice from uninitialized data
  --> tests/ui/cve_2021_29941_2/cve_2021_29941_2_from_raw_parts.rs:7:36
   |
LL |     let len = bla.len();
   |               --------- slice created with this length
LL |     let mut vec = Vec::with_capacity(len);
   |                   ----------------------- `std::vec::Vec` created but not initialized
LL |     let arr: &mut [u32] = unsafe { std::slice::from_raw_parts_mut(vec.as_mut_ptr(), len) };
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----------------^^^^^^
   |                                                                   |
   |                                                                   slice created with this pointer
   |
   = help: See https://doc.rust-lang.org/std/slice/fn.std::slice::from_raw_parts_mut.html

error: aborting due to 1 previous error

